force-app/main/default/objects/uhitmessage__c/uhitmessage__c.object-meta.xml
<CustomObject>
    <label>uhitmessage</label>
    <nameField>
        <label>uhitmessage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>uhitmessage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>