force-app/main/default/objects/uhitmessage__c/fields/ActKWH__c.field-meta.xml
<CustomField>
    <fullName>ActKWH__c</fullName>
    <label>ActKWH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>