force-app/main/default/objects/uhitmessage__c/fields/BilledKVA__c.field-meta.xml
<CustomField>
    <fullName>BilledKVA__c</fullName>
    <label>BilledKVA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>