force-app/main/default/objects/uhitmessage__c/fields/item__c.field-meta.xml
<CustomField>
    <fullName>item__c</fullName>
    <label>item</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>