force-app/main/default/objects/uhitmessage__c/fields/LoadProfile__c.field-meta.xml
<CustomField>
    <fullName>LoadProfile__c</fullName>
    <label>LoadProfile</label>
    <length>100</length>
    <type>Text</type>
</CustomField>