force-app/main/default/objects/uhitmessage__c/fields/MeteredKVA__c.field-meta.xml
<CustomField>
    <fullName>MeteredKVA__c</fullName>
    <label>MeteredKVA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>