force-app/main/default/objects/uhitmessage__c/fields/MeterReadCycle__c.field-meta.xml
<CustomField>
    <fullName>MeterReadCycle__c</fullName>
    <label>MeterReadCycle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>