force-app/main/default/objects/uhitmessage__c/fields/mulerecord__c.field-meta.xml
<CustomField>
    <fullName>mulerecord__c</fullName>
    <externalId>true</externalId>
    <label>mulerecord</label>
    <length>100</length>
    <type>Text</type>
</CustomField>