force-app/main/default/objects/uhitmessage__c/fields/PowerFactor__c.field-meta.xml
<CustomField>
    <fullName>PowerFactor__c</fullName>
    <label>PowerFactor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>