force-app/main/default/objects/uhitmessage__c/fields/Premise__c.field-meta.xml
<CustomField>
    <fullName>Premise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Premise</label>
    <referenceTo>Premises__c</referenceTo>
    <relationshipLabel>uhitmessage</relationshipLabel>
    <relationshipName>uhitmessage</relationshipName>
    <type>Lookup</type>
</CustomField>