force-app/main/default/objects/uhitmessage__c/fields/RateCode__c.field-meta.xml
<CustomField>
    <fullName>RateCode__c</fullName>
    <label>RateCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>