force-app/main/default/objects/uhitmessage__c/fields/RequestStatus__c.field-meta.xml
<CustomField>
    <fullName>RequestStatus__c</fullName>
    <label>RequestStatus</label>
    <length>10</length>
    <type>Text</type>
</CustomField>