force-app/main/default/objects/uhitmessage__c/listViews/Last_Week.listView-meta.xml
<ListView>
    <fullName>Last_Week</fullName>
    <columns>NAME</columns>
    <columns>ActKWH__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_WEEK</value>
    </filters>
    <label>Last Week</label>
    <language>en_US</language>
</ListView>